--- a/nx.json
+++ b/nx.json
@@ -87,7 +87,8 @@
       "inputs": ["default", "^default"]
     },
     "build-storybook": {
-      "cache": true
+      "cache": true,
+      "dependsOn": ["^build"]
     }
   },
   "generators": {
