--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@nx/web": "21.2.0",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "20.0.2",
+    "@storybook/addon-docs": "^9.0.12",
     "@storybook/angular": "9.0.12",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.0.0",
     "@typescript-eslint/utils": "^8.19.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -63,6 +65,5 @@
       "eslint --fix"
     ],
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "dependencies": {}
+  }
 }
