--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "@nx/js": "21.2.0",
     "@nx/playwright": "21.2.0",
     "@nx/react": "21.2.0",
+    "@nx/storybook": "21.2.0",
     "@nx/vite": "21.2.0",
     "@nx/web": "21.2.0",
-    "@pellegrims/nx-remotecache-s3": "^8.1.0",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "20.0.2",
+    "@storybook/addon-docs": "^9.0.12",
+    "@storybook/angular": "9.0.12",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.0.0",
     "@typescript-eslint/utils": "^8.19.0",
     "@vitest/coverage-v8": "^3.0.5",
@@ -44,7 +47,12 @@
     "jsdom": "~22.1.0",
     "lint-staged": "^15.5.1",
     "nx": "21.2.0",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
+    "storybook": "9.0.12",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.31.0",
