--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -5,7 +5,7 @@
     "url": "https://github.com/ks-no/designsystem.git",
     "directory": "packages/angular"
   },
-  "version": "0.0.1-alpha.6",
+  "version": "0.0.1-alpha.9",
   "license": "MIT",
   "private": false,
   "publishConfig": {
@@ -15,9 +15,8 @@
   "files": [
     "./dist"
   ],
-  "dependencies": {
-    "@digdir/designsystemet-css": "1.0.5"
-  },
+  "main": "./dist/fesm2022/ks-digital-designsystem-angular.mjs",
+  "types": "./dist/index.d.ts",
   "peerDependencies": {
     "@angular/common": ">=20.0.0",
     "@angular/core": ">=20.0.0",
