--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss-cli": "^11.0.1",
     "postcss-import": "^16.1.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "storybook": "9.0.12",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
