--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -34,6 +34,7 @@
     "@angular-eslint/schematics": "^20.0.0",
     "@angular-eslint/template-parser": "^20.0.0",
     "@testing-library/angular": "^17.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "angular-eslint": "^20.0.0",
     "jsdom": "~22.1.0",
     "ng-packagr": "^20.0.1"
