--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,15 +25,15 @@
     "./dist"
   ],
   "dependencies": {
-    "@digdir/designsystemet-react": "1.0.5",
+    "@digdir/designsystemet-react": "1.1.9",
     "@navikt/aksel-icons": "^7.21.1"
   },
   "devDependencies": {
+    "@testing-library/react": "16.1.0",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "@testing-library/react": "16.1.0"
+    "eslint-plugin-react-hooks": "5.0.0"
   },
   "peerDependencies": {
     "react": ">=18.3.1",
