--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -17,6 +17,9 @@
   ],
   "main": "./dist/fesm2022/ks-digital-designsystem-angular.mjs",
   "types": "./dist/index.d.ts",
+  "dependencies": {
+    "@floating-ui/dom": "^1.7.3"
+  },
   "peerDependencies": {
     "@angular/common": ">=20.0.0",
     "@angular/core": ">=20.0.0",
