--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -41,5 +41,8 @@
   },
   "scripts": {
     "build": "ng-packagr -p ng-package.json"
+  },
+  "dependencies": {
+    "@material-symbols/font-400": "^0.34.1"
   }
 }
