--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@iconify-json/material-symbols": "^1.2.32",
     "@nx/angular": "21.2.0",
     "@nx/devkit": "21.2.0",
     "@nx/eslint": "21.2.0",
@@ -62,6 +63,7 @@
     "tslib": "^2.8.1",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.39.0",
+    "unplugin-icons": "^22.2.0",
     "vite": "^6.3.5",
     "vite-plugin-dts": "~4.5.4",
     "vitest": "^3.2.4"
