--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "exports": {
     "./base.css": "./dist/base.css",
+    "./base.tailwind.css": "./dist/base.tailwind.css",
     "./ledsagerbevis.css": "./dist/themes/ledsagerbevis.css",
     "./forvaltning.css": "./dist/themes/forvaltning.css"
   },
