--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: pnpm nx format:check
 
       - name: Lint
-        run: pnpm nx affected --target=lint
+        run: pnpm nx affected --target=lint --max-warnings=0
 
       - name: Build
         run: pnpm nx affected --target=build
