--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -37,6 +37,9 @@
     "@angular-eslint/eslint-plugin-template": "^20.0.0",
     "@angular-eslint/schematics": "^20.0.0",
     "@angular-eslint/template-parser": "^20.0.0",
+    "@ng-icons/core": "^32.1.0",
+    "@ng-icons/material-icons": "^32.1.0",
+    "@ng-icons/material-symbols": "^32.1.0",
     "@testing-library/angular": "^17.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "angular-eslint": "^20.0.0",
